tests/typechecking/valid/if2.ml
if 5<=9 then
print_float(5.9)
else
print_int(5)
