tests/typechecking/invalid/if2.ml
if 5<=9.4 then
print_int(9)
else
print_int(5)
